iRedMail-0.9.0:
    * Disable 'smtp_tls_security_level=may', doesn't work very well with
      self-signed SSL certificate, especially sending email from Gmail.
    * New column for SQL backends (mailbox.enablelmtp) and new attribute/value
      pair for LDAP mail user: enabledService=lmtp. Used for LMTP service.

iRedMail-0.8.6:
    * Works on new Linux/BSD distribution releases:
        - Works on Ubuntu 13.10 (saucy). NOTE: phpLDAPadmin is not available
          for OpenLDAP backend because it cannot be installed at all.
        - OpenBSD 5.4, plus Awstats support.

    * Drop support for below releases:
        + Debian 6 (squeeze). Please use Debian 7 (wheezy) instead.
        + OpenBSD 5.3. Please use OpenBSD 5.4 (released on 2013-11-01) instead.

    * Drop support for Gentoo Linux and openSUSE linux.
      Just few users chose them, so we decided to drop it to reduce our
      workload and bring you better support for supported Linux/BSD distributions.

    * Better support for installing iRedMail with remote MySQL server.
      Reference:
      http://www.iredmail.org/wiki/index.php?title=IRedMail/FAQ/MySQL/install.iredmail.with.remote.mysql.server
    * Enable 'innodb_file_per_table' (per-table tablespaces) in MySQL by
      default, this parameter avoids large ibdata files (.idb).
      Reference:
      http://dev.mysql.com/doc/refman/5.5/en/innodb-multiple-tablespaces.html
    * Enable Opportunistic TLS support in Postfix when sending mail to remote
      SMTP server (smtp_tls_security_level=may).
      Thanks kotso <admin _at_ co.ge> and vlastikcz for the report.
    * Switch from Policyd-1.8 to Cluebringer on all Linux/BSD distributions.
      NOTE: The latest iRedAdmin-Pro supports Cluebringer management, includes
      white/black/greylisting, throttling.
    * Add parameter 'inet6 => 0' in Amavisd ldap settings to avoid ldap
      connection error.

    * Fixed issues:
        + Not rotate Cluebringer log file.